# goph547-w2026-lab00-stDA

./: README.md  pyproject.toml
examples/: driver.py  driver2.py
src/goph547lab00/: arrays.py
