[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph547lab00"
version = "0.0.1"
authors = [
  { name = "Daniel Afolabi", email = "daniel.afolabi@ucalgary.ca" },
]
description = "A Python package for GOPH 547 Lab 0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/karcheba1/goph547-lab00-stDA"
